add client swagger, show a single product
